--- a/libs/css/main.css
+++ b/libs/css/main.css
@@ -532,9 +532,11 @@ section.five {
 	text-align: center;
 	line-height: 300px;
 	text-shadow: 0 0 20px #fff;
+	cursor: pointer;
+}
+.movewelcome{
 	animation: 1s rubberBand;
 }
-
 @keyframes rubberBand {
 	from {
 		-webkit-transform: scale3d(1, 1, 1);
